@@ -12,10 +12,10 @@ function pretty_urls_actions_filter($urls)
 
 	$pattern = '~' . $scripturl . '(.*)action=([^;]+)~S';
 	$replacement = $boardurl . '/$2/$1';
-	foreach ($urls as $crc => $url)
+	foreach ($urls as $url_id => $url)
 		if (!isset($url['replacement']))
 			if (preg_match($pattern, $url['url']))
-				$urls[$crc]['replacement'] = preg_replace($pattern, $replacement, $url['url']);
+				$urls[$url_id]['replacement'] = preg_replace($pattern, $replacement, $url['url']);
 	return $urls;
 }
 
@@ -26,23 +26,23 @@ function pretty_urls_topic_filter($urls)
 
 	$pattern = '~' . $scripturl . '(.*[?;&])topic=([.a-zA-Z0-9]+)(.*)~S';
 	$query_data = array();
-	foreach ($urls as $crc => $url)
+	foreach ($urls as $url_id => $url)
 	{
 		//	Get the topic data ready to query the database with
 		if (!isset($url['replacement']))
 			if (preg_match($pattern, $url['url'], $matches))
 			{
 				if (strpos($matches[2], '.') !== false)
-					list ($urls[$crc]['topic_id'], $urls[$crc]['start']) = explode('.', $matches[2]);
+					list ($urls[$url_id]['topic_id'], $urls[$url_id]['start']) = explode('.', $matches[2]);
 				else
 				{
-					$urls[$crc]['topic_id'] = $matches[2];
-					$urls[$crc]['start'] = '0';
+					$urls[$url_id]['topic_id'] = $matches[2];
+					$urls[$url_id]['start'] = '0';
 				}
-				$urls[$crc]['topic_id'] = (int) $urls[$crc]['topic_id'];
-				$urls[$crc]['match1'] = $matches[1];
-				$urls[$crc]['match3'] = $matches[3];
-				$query_data[] = $urls[$crc]['topic_id'];
+				$urls[$url_id]['topic_id'] = (int) $urls[$url_id]['topic_id'];
+				$urls[$url_id]['match1'] = $matches[1];
+				$urls[$url_id]['match3'] = $matches[3];
+				$query_data[] = $urls[$url_id]['topic_id'];
 			}
 	}
 
@@ -63,11 +63,11 @@ function pretty_urls_topic_filter($urls)
 		mysql_free_result($query);
 
 		//	Build the replacement URLs
-		foreach ($urls as $crc => $url)
+		foreach ($urls as $url_id => $url)
 			if (isset($url['topic_id']) && isset($topicData[$url['topic_id']]))
 			{
 				$start = $url['start'] != '0' || is_numeric($topicData[$url['topic_id']]['pretty_url']) ? $url['start'] . '/' : '';
-				$urls[$crc]['replacement'] = $modSettings['pretty_root_url'] . '/' . $topicData[$url['topic_id']]['pretty_board'] . '/' . $topicData[$url['topic_id']]['pretty_url'] . '/' . $start . $url['match1'] . $url['match3'];
+				$urls[$url_id]['replacement'] = $modSettings['pretty_root_url'] . '/' . $topicData[$url['topic_id']]['pretty_board'] . '/' . $topicData[$url['topic_id']]['pretty_url'] . '/' . $start . $url['match1'] . $url['match3'];
 			}
 	}
 	return $urls;
@@ -79,7 +79,7 @@ function pretty_urls_board_filter($urls)
 	global $scripturl, $modSettings, $context;
 
 	$pattern = '~' . $scripturl . '(.*[?;&])board=([.0-9]+)(.*)~S';
-	foreach ($urls as $crc => $url)
+	foreach ($urls as $url_id => $url)
 		//	Split out the board URLs and replace them
 		if (!isset($url['replacement']))
 			if (preg_match($pattern, $url['url'], $matches))
@@ -93,7 +93,7 @@ function pretty_urls_board_filter($urls)
 				}
 				$board_id = (int) $board_id;
 				$start = $start != '0' ? $start . '/' : '';
-				$urls[$crc]['replacement'] = $modSettings['pretty_root_url'] . '/' . (isset($context['pretty']['board_urls'][$board_id]) ? $context['pretty']['board_urls'][$board_id] : $board_id) . '/' . $start . $matches[1] . $matches[3];
+				$urls[$url_id]['replacement'] = $modSettings['pretty_root_url'] . '/' . (isset($context['pretty']['board_urls'][$board_id]) ? $context['pretty']['board_urls'][$board_id] : $board_id) . '/' . $start . $matches[1] . $matches[3];
 			}
 	return $urls;
 }
@@ -105,16 +105,16 @@ function pretty_profiles_filter($urls)
 
 	$pattern = '~' . $scripturl . '(.*)action=profile;u=([0-9]+)(.*)~S';
 	$query_data = array();
-	foreach ($urls as $crc => $url)
+	foreach ($urls as $url_id => $url)
 	{
 		//	Get the profile data ready to query the database with
 		if (!isset($url['replacement']))
 			if (preg_match($pattern, $url['url'], $matches))
 			{
-				$urls[$crc]['profile_id'] = (int) $matches[2];
-				$urls[$crc]['match1'] = $matches[1];
-				$urls[$crc]['match3'] = $matches[3];
-				$query_data[] = $urls[$crc]['profile_id'];
+				$urls[$url_id]['profile_id'] = (int) $matches[2];
+				$urls[$url_id]['match1'] = $matches[1];
+				$urls[$url_id]['match3'] = $matches[3];
+				$query_data[] = $urls[$url_id]['profile_id'];
 			}
 	}
 
@@ -131,10 +131,10 @@ function pretty_profiles_filter($urls)
 		mysql_free_result($query);
 
 		//	Build the replacement URLs
-		foreach ($urls as $crc => $url)
+		foreach ($urls as $url_id => $url)
 		{
 			if (isset($url['profile_id']))
-				$urls[$crc]['replacement'] = $boardurl . '/profile/' . $memberNames[$url['profile_id']] . '/' . $url['match1'] . $url['match3'];
+				$urls[$url_id]['replacement'] = $boardurl . '/profile/' . $memberNames[$url['profile_id']] . '/' . $url['match1'] . $url['match3'];
 		}
 	}
 	return $urls;
